# digestive-functors-hamlet

./: LICENSE  README.md  digestive-functors-hamlet.cabal  stack.yaml
src/: Main.hs
